--- a/cmd/config.yaml
+++ b/cmd/config.yaml
@@ -1,9 +1,17 @@
 app:
-  port: "8080"
+  name: project
+  port: 8080
 
 database:
-  host: ""
-  port: ""
-  username: ""
-  password: ""
-  database: ""
+  host: localhost
+  port: 5432
+  username: postgres
+  password: "123456"
+  database: xxxxx
+cache:
+  host: localhost
+  port: 6379
+  database: 0
+logstash:
+  host: localhost
+  port: 5043
